# sampik

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE-MIT  QUESTIONS_AND_IDEAS.md  README.md
docs/: API_CODE_EXAMPLES.md  QUESTIONS_AND_IDEAS.md  ROADMAP.md  TECHNICAL_DESIGN_DECISIONS.md
sampik/: CMakeLists.txt
sampik/sampik/: CMakeLists.txt  core.hpp  sampik.hpp
sampik/sampik/impl/: CMakeLists.txt
sampik/test/: CMakeLists.txt  send_recv.test.cpp
src/: CMakeLists.txt  sampik.hpp
src/impl/: sampik_types.hpp
src/sampik/: sampik.hpp
src/sampik/impl/: types.hpp
src/test/: CMakeLists.txt
test/: CMakeLists.txt  send_recv.cpp
tests/: CMakeLists.txt  send_recv.test.cpp
